# blaze

./: .gitignore  .gitmodules  Cargo.toml  README.md  bochsrc  bochsrc-gui  bx_enh_dbg.ini  justfile  rust-toolchain.toml  x86_64-blaze.json
.cargo/: runner.sh
docs/: KMALLOC.md  LIMINE_PROTOCOL.md
grub/: grub.cfg
kernel/: Cargo.toml  build.rs  link.ld
kernel/conf/: limine.cfg
kernel/src/: allocator.rs  boot.asm  cmdline.rs  gdt.rs  init.rs  interrupts.rs  lib.rs  main.rs  print.rs  threading.rs  util.rs
kernel/src/acpi/: hpet.rs  madt.rs  mod.rs  rsdp.rs  rsdt.rs
kernel/src/asm/: thread.S  usermode.S
kernel/src/io/: colours.rs  io.rs  klog.rs  log_macros.rs  mod.rs  paging.rs  print.rs
kernel/src/loader/: elf.rs  mod.rs
kernel/src/memory/: allocator.rs  bump_alloc.rs  memory.rs  mod.rs
kernel/src/scheduling/: mod.rs  threading.rs
kernel/src/structures/: gdt.rs  idt.rs  tss.rs
mbheader/: Cargo.toml
mbheader/src/: main.rs
usermode/: Cargo.toml
usermode/src/: lib.rs
userspace/user_c/: main.c
userspace/user_test/: Cargo.toml  build.rs
userspace/user_test/conf/: linker.ld
userspace/user_test/src/: main.rs
