[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
log = "0.4.20"
multiboot2 = { version = "0.19.0", default-features = false }
rlibc = "1.0.0"
spin = "0.9.8"
yansi = { version = "1.0.0-rc.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["race"] }
